# single_motor_ctrl

./: CMakeLists.txt  README.md
configs/: motor_cli.conf
docs/: operation_guide.md
include/app/: cli_app.h
include/common/: config_loader.h
include/control/: safety_manager.h  telemetry_monitor.h
include/device/: board_client.h
include/domain/: motor_types.h  single_motor_controller.h
include/driver/: motor_driver.h
linux_sdk/: README.md
linux_sdk/doc/html/: _c_types_8h.html  _c_types_8h.js  _c_types_8h_source.html  _robot_control_8h.html  _robot_control_8h.js  _robot_control_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  menudata.js  navtreedata.js  navtreeindex0.js
linux_sdk/doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  files_0.js  files_1.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js
linux_sdk/example_C/: CMakeLists.txt  current_control_get_pvct.c  get_motor_model.c  get_strong_dragging_model.c  mother_board_firmware_ota.c  motor_firmware_ota.c  pd_control_get_pvct.c  pose_control_get_pvct.c  set_control_world.c  set_control_world_calibration.c  set_id.c  set_sensor_less.c  velcity_control_get_pvct.c
linux_sdk/include/c/: CTypes.h  RobotControl.h
src/: main.cpp
src/app/: cli_app.cpp
src/common/: config_loader.cpp
src/control/: safety_manager.cpp  telemetry_monitor.cpp
src/device/: board_client.cpp
src/domain/: single_motor_controller.cpp
src/driver/: motor_driver.cpp
